fix(switch): remove overflow for focus-visible

--- a/packages/stencil/components/switch/src/components/osds-switch/osds-switch.scss
+++ b/packages/stencil/components/switch/src/components/osds-switch/osds-switch.scss
@@ -11,7 +11,6 @@
 :host {
   display: inline-flex;
   flex-flow: row;
-  overflow: hidden;
   border-radius: 1.375em;
 }
 
